--- a/temp1.ipynb
+++ b/temp1.ipynb
@@ -19,8 +19,25 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "np.array([1,2,3])\n"
+    "np.array([1,2,3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pillow as PIL\n",
+    "Image.MAX_IMAGE_PIXELS = 1000000000000\n",
+    "\n",
+    "Image.open()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
