running decision dictionary

--- a/temp1.ipynb
+++ b/temp1.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -18,26 +21,15 @@
    ],
    "source": [
     "import numpy as np\n",
+    "from PIL.Image import Image\n",
     "\n",
-    "np.array([1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import pillow as PIL\n",
+    "np.array([1,2,3])\n",
+    "\n",
+    "# import pillow as PIL\n",
     "Image.MAX_IMAGE_PIXELS = 1000000000000\n",
     "\n",
     "Image.open()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
